--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,13 +15,13 @@
         android:theme="@style/Theme.CineriesBox"
         tools:targetApi="31">
         <activity
-            android:name=".RecuperarClave"
+            android:name=".RecuperarClaveActivity"
             android:exported="false" />
         <activity
-            android:name=".Registro"
+            android:name=".RegistroActivity"
             android:exported="false" />
         <activity
-            android:name=".Login"
+            android:name=".LoginActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
