--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:theme="@style/Theme.CineriesBox"
         tools:targetApi="31">
         <activity
-            android:name="Main.ActividadPantallaPrincipal"
+            android:name="Home.ActividadEditarPerfil"
+            android:exported="false" />
+        <activity
+            android:name="Home.ActividadPantallaPrincipal"
             android:exported="false" />
         <activity
             android:name="Auth.ActividadRecuperarClave"
