Fragmento principal implementado mejores-categorias-por_venir

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.CineriesBox"
         tools:targetApi="31">
         <activity
+            android:name="ConAPI.ActividadDetalleFilm"
+            android:exported="false" />
+        <activity
             android:name="Home.ActividadPantallaPrincipal"
             android:exported="false" />
         <activity
